--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "mocha ./test/*.spec.js"
   },
   "dependencies": {
     "body-parser": "1.18.2",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
     "chai-http": "3.0.0",
     "mocha": "4.0.1"
   }
