--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "4.13.0",
     "morgan": "1.9.0",
     "nconf": "0.9.1",
+    "node-fetch": "1.7.3",
     "nodemon": "1.12.1",
     "winston": "2.4.0"
   },
