--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production nodemon index.js",
+    "dev": "cross-env NODE_ENV=dev nodemon index.js",
     "test": "mocha ./test/*.spec.js"
   },
   "dependencies": {
     "body-parser": "1.18.2",
+    "cross-env": "5.1.5",
     "express": "4.16.2",
     "mongoose": "4.13.0",
     "morgan": "1.9.0",
