--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "mocha ./test/*.spec.js"
   },
   "dependencies": {
-    "body-parser": "1.18.2",
+    "body-parser": "1.18.3",
+    "cookie-parser": "1.4.3",
     "cross-env": "5.1.5",
     "express": "4.16.2",
     "mongoose": "4.13.0",
