Added now environment variables.  Added standalone token auth.

--- a/now.json
+++ b/now.json
@@ -4,7 +4,9 @@
         "ryquotes"
     ],
     "env": {
-        
+        "db": "@quotes_db",
+        "jwtSecret": "@jwt_secret",
+        "cookieSecret": "@cookie_secret"
     },
     "engines": {
         "node": "^10"
