check to see if lock is updated.

--- a/now.json
+++ b/now.json
@@ -1,8 +1,6 @@
 {
     "name": "ryquotes",
-    "alias": [
-        "ryquotes"
-    ],
+    "alias": "ryquotes",
     "env": {
         "db": "@quotes_db",
         "jwtSecret": "@jwt_secret",
@@ -11,6 +9,6 @@
     "engines": {
         "node": "^10"
     },
-    "publie": true,
+    "public": true,
     "type": "npm"
 }
