--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
   "scripts": {
     "start": "cross-env NODE_ENV=prod nodemon index.js",
     "dev": "cross-env NODE_ENV=dev nodemon index.js",
-    "test": "mocha ./test/*.spec.js"
+    "test": "mocha ./test/*.spec.js",
+    "deploy": "now --public && now alias"
   },
   "dependencies": {
     "body-parser": "1.18.3",
     "cookie-parser": "1.4.3",
-    "cross-env": "5.1.5",
-    "express": "4.16.2",
+    "cross-env": "5.2.0",
+    "express": "4.16.3",
     "jsonwebtoken": "8.3.0",
-    "mongoose": "4.13.0",
+    "mongoose": "5.2.7",
     "morgan": "1.9.0",
-    "nconf": "0.9.1",
-    "node-fetch": "1.7.3",
-    "nodemon": "1.12.1",
-    "winston": "2.4.0"
+    "nconf": "0.10.0",
+    "node-fetch": "2.2.0",
+    "nodemon": "1.18.3",
+    "winston": "3.0.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
-    "chai-http": "3.0.0",
-    "mocha": "4.0.1"
+    "chai-http": "4.0.0",
+    "mocha": "5.2.0"
   }
 }
